--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <header class="header">
         <div class="brand">
             <h1 class="brand__h1">
-                ¡Politiqueando Ando!
+                Politiqueando Ando
             </h1>
         </div>
             <div class="nav-wrapper">
                 <ul class="menu">
-                    <li 
-                    class="menu_item"><a class="menu_link" href="">Nosotros</a>
-                </li>
-                    <li 
-                    class="menu_item"><a class="menu_link" href="">Nuestros Servicios</a>
-                </li>
-                    <li
-                     class="menu_item"><a class="menu_link" href="">Contáctenos</a>
-                    </li>
+                    
+                        <li>
+                            <a class="menu_item" href="#nuestros_servicios">¿Quienes somos?</a>
+                        </li>
+                        <li>
+                            <a class="menu_item" href="#contact-section">Contactanos</a>
+                        </li>
+                        
+
                 </ul>
             </div>
             <div class="search-wrapper">
@@ -46,7 +46,7 @@
             </div>
             <div class="vacio"></div>
         </section>
-        <section class="nuestros_servicios">
+        <section class="nuestros_servicios" id="nuestros_servicios">
             <div class="container">
                 <div class="col-left-1">
                     <h1 class="nuestros_title-1 nuestro_title-1--bienvenido">
